# deluca

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .python-version  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Gemfile  README.md  _config.yml  environment.yml  index.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yml  pypi.yml
_layouts/: default.html
_sass/: fonts.scss
colabs/: deluca  specrtal-filtering-learner.ipynb  test_agents_on_lds.ipynb
deluca/: __init__.py  _version.py  core.py  leakr_recipes.ftrcp  version.py
deluca/_src/: base.py
deluca/_src/agents/: __init__.py  bang_bang.py  constant.py  pid.py  random.py
deluca/_src/envs/: __init__.py
deluca/agents/: __init__.py  _adaptive.py  _bang_bang.py  _bpc.py  _deep.py  _drc.py  _dsc.py  _gpc.py  _grc.py  _hinf.py  _igpc.py  _ilc.py  _ilqr.py  _lqg.py  _lqr.py  _pid.py  _predestined.py  _random.py  _sfc.py  _zero.py  core.py  planning_utils.py
deluca/colabs/: Control_Algorithms.ipynb  brax_lqr_pendulum.py  control_algs.py  deluca_2.ipynb  lqr.py  nndrc.py  nngpc.py  old_control_algs.py  online_lqr.py  ppo_brax_inv_pendulum.py  sim_gpc.py  test.py  test_agents_on_lds.ipynb
deluca/envs/: __init__.py  _brax.py  _lds.py  brax.py  core.py
deluca/envs/brax/: _pendulum2d.py  _pendulum3d.py  _reacher.py
deluca/envs/classic/: __init__.py  _acrobot.py  _cartpole.py  _mountain_car.py  _pendulum.py  _planar_quadrotor.py  _planar_quadrotor_wind.py  _reacher.py
deluca/envs/lung/: __init__.py  _balloon_lung.py  _delay_lung.py  _learned_lung.py  core.py
deluca/envs/mujoco/: Pusher_test.ipynb  __init__.py  _ant.py  _hopper.py  (+12 more)
deluca/experimental/: config.py  experiments.py  mpc.py  mpc_config.py  plot_comparison.py
deluca/igpc/: igpc.py  ilc.py  ilqr.py  lqr_solver.py  rollout.py
deluca/learners/: __init__.py  core.py  linear_learner.py  nn_learner.py  pytorch_lin_learner.py  spectral_learner.py
deluca/lung/: __init__.py  core.py
deluca/sysid/: experiment.py  spectral.py
deluca/training/: __init__.py  apg.py  ppo.py
deluca/utils/: __init__.py  dataclass.py  experiment.py  planning.py  printing.py  random.py  tree.py
docs/source/: conf.py  deluca.agents.Adaptive.rst  deluca.agents.Agent.rst  deluca.agents.DRC.rst  deluca.agents.Deep.rst  deluca.agents.GPC.rst  deluca.agents.Hinf.rst  deluca.agents.ILQR.rst  deluca.agents.LQR.rst  deluca.agents.PID.rst  deluca.agents.Zero.rst  deluca.core.JaxObject.rst  deluca.envs.BalloonLung.rst  deluca.envs.DelayLung.rst  deluca.envs.LDS.rst  deluca.envs.LearnedLung.rst  deluca.envs.classic.Acrobot.rst  deluca.envs.classic.CartPole.rst  deluca.envs.classic.MountainCar.rst  deluca.envs.classic.Pendulum.rst  deluca.envs.classic.PlanarQuadrotor.rst  deluca.envs.lung.Lung.rst  deluca.rst  index.rst
examples/agents/: Adaptive Test.ipynb  DRC test.ipynb  LDS_Adaptive.ipynb  LDS_DRC.ipynb  LDS_GPC.ipynb  LDS_hinf.ipynb  adagpc.ipynb  balloon_lung_pid.ipynb  bpc.ipynb  cartpole_deep.ipynb  deep.ipynb  drc.ipynb  gpc vs adagpc.ipynb  gpc.ipynb  hinf.ipynb  ilqr.ipynb  ilqr_quadrotor.ipynb  lqr.ipynb  pendulum_ilqr.ipynb  pendulum_lqr.ipynb  pid.ipynb
plugin/: README.md  setup.cfg  setup.py
scripts/: make_plugin.py  make_update.sh
tests/: __init__.py  test_deluca.py
tests/agents/: test_deep.py  test_gpc.py  test_hinf.py  test_ilqr.py  test_lqr.py  test_pid.py  test_zero.py
tests/utils/: test_experiment.py
(+163 files in other folders)
