[metadata]
name = deluca
version = 0.0.1
author = Google AI Princeton
author_email = dsuo@google.com
url = https://github.com/MinRegret/deluca
description = 
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
  differentiable
  control algorithms
  reinforcement learning
license = Apache License
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
  Development Status :: 3 - Alpha

[options]
packages = find:
install_requires =
  numpy
  scipy
  jax
  jaxlib
  gym

[options.extras_require]
dev =
  tqdm
  jupyter
  ipython
  pytest
  flake8
  flake8-print
  flake8-bugbear
  mypy
  pytest-cov
  pytest-instafail
  pytest-xdist
  pylint
  black
  reorder-python-imports
  autoflake
  pre-commit
  pydocstring-coverage
  bumpversion
  ipython
  jupyter
  gprof2dot
  bandit
  check-python-versions
  line-profiler
  matplotlib
docs =
  sphinx
  sphinxcontrib-napoleon
  sphinx_rtd_theme

[flake8]
ignore = E741
select = B,C,E,F
max-line-length = 100
max-complexity = 15

[run]
omit = 
	setup.py

[report]
exclude_lines = 
	@abstractmethod
	raise NotImplementedError

[pylint]
load-plugins = 
	pylint.extensions.docparams,
	pylint.extensions.docstyle
disable = 
	fixme,
	bad-continuation

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]

