[bumpversion]
current_version = 0.0.17
commit = True
tag = True

[metadata]
name = deluca
version = attr: deluca.version.__version__
author = Google AI Princeton
author_email = dsuo@google.com
url = https://github.com/google/deluca
description = 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
	differentiable
	control algorithms
	reinforcement learning
license = Apache License
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: Apache Software License
	Operating System :: OS Independent
	Development Status :: 3 - Alpha

[options]
packages = find_namespace:
python_requires = >=3.7
install_requires = 
	numpy
	scipy
	jax
	optax
	flax
	brax

[options.extras_require]
dev = 
	pathos
	tqdm
	jupyter
	ipython
	pytest
	flake8
	flake8-print
	flake8-bugbear
	mypy
	pytest-cov
	pytest-instafail
	pytest-xdist
	pylint
	black
	reorder-python-imports
	autoflake
	pre-commit
	pydocstring-coverage
	bumpversion
	ipython
	jupyter
	gprof2dot
	bandit
	check-python-versions
	line-profiler
docs = 
	sphinx
	sphinxcontrib-napoleon
	sphinx_rtd_theme

[flake8]
ignore = E203,E741
select = B,C,E,F
max-line-length = 100
max-complexity = 15

[run]
omit = 
	setup.py

[report]
exclude_lines = 
	@abstractmethod
	raise NotImplementedError

[pylint]
load-tests = 
	pylint.extensions.docparams,
	pylint.extensions.docstyle
disable = 
	fixme,
	bad-continuation

[bumpversion:file:deluca/version.py]
