[metadata]
name = deluca-plugin
version = attr: deluca.plugin._version.__version__
author = [AUTHOR]
author_email = [AUTHOR_EMAIL]
url = [URL]
description = [DESCRIPTION]
long_description = file: README.md
long_description_content_type = text/markdown
keywords = [KEYWORDS]
license = [LICENSE]
classifiers = [CLASSIFIERS]

[options]
packages = find_namespace:
install_requires =
    deluca